# betting_crm

./: .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  pyproject.toml  requirements.txt
aiogram_dispatcher/: apps.py  dispatcher.py  tasks.py  triggers.py
backend/: celery.py  middlewares.py  settings.py  urls.py
feedback/: admin.py  apis.py  apps.py  models.py  serializers.py  urls.py
feedback/migrations/: 0001_initial.py  0002_techsupportticket_status_updateticket_status.py  0003_updatelog.py
payments/: admin.py  apis.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py
payments/migrations/: 0001_initial.py  0002_subscription_tariff_duration.py  0003_alter_subscription_options_and_more.py  0004_alter_payments_expired_at.py  0005_activatedtrialperiod.py  0006_payments_status.py  0007_alter_payments_status.py  0008_tariff_photo.py  0009_promocode_activatedpromocode.py  0010_activatedpromocode_buyed.py  0011_payments_promocode.py  0012_alter_payments_promocode.py  0013_payments_trial.py  0014_tariff_is_private.py  0015_observedtopic_observedtopicsettings_and_more.py  0016_observedtopic_slug.py  0017_observedtopicsettings_profile_and_more.py  0018_observedtopicsettings_is_active.py
profiles/: admin.py  apis.py  apps.py  models.py  serializers.py  signals.py  urls.py
profiles/migrations/: 0001_initial.py  0002_profile_username.py  0003_alter_profile_tg_id.py  0004_profile_referrer_referalprogramaccount.py  0005_referalprogramaccount_referal_url_and_more.py  0008_freebetfilter.py  (+3 more)
